Bug 134365 - Large GIF animation slow with Skia Vulkan/fine with Raster
Summary: Large GIF animation slow with Skia Vulkan/fine with Raster
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords:
: 134366 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-06-28 15:13 UTC by Telesto
Modified: 2020-07-04 13:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (4.28 MB, application/vnd.oasis.opendocument.presentation)
2020-06-28 15:13 UTC, Telesto
Details
Screencast disappearing gif (1.85 MB, video/mp4)
2020-06-28 15:48 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-06-28 15:13:11 UTC
Description:
Large GIF animation slow with Skia Vulkan/fine with Raster

Steps to Reproduce:
1. Open the attached file
2. Should be slow already
3. Else hoover the mouse above the image (should cause a slowdown).. and back the sheet

Actual Results:
Slow

Expected Results:
Normal speed


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 006c65bbd472cb1d7d44e095714e28190b76be0d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Vulkan; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-06-28 15:13:28 UTC
Created attachment 162480 [details]
Example file
Comment 2 Telesto 2020-06-28 15:48:42 UTC
Created attachment 162482 [details]
Screencast disappearing gif

Offtopic (but same sample file)
Another evil.. disappearing gif (also seen with image).. frame still around.. and will repaint after click..

Does happen at random once in a while.. Have seen this a couple of times already.. but could be my beloved driver again (I recorded this with Skia/Vulkan).. So more a head-up
Comment 3 Luboš Luňák 2020-06-30 11:21:10 UTC
*** Bug 134366 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2020-07-01 05:39:10 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1fca8d1f7d97816ae469f2eb3079ecda9542bd44

avoid costly to-monochrome-bitmap conversion with Skia (tdf#134365)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-07-02 18:48:54 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/b666333c6c4eb2013ff3d8d9119c660ed1e9c372

avoid costly to-monochrome-bitmap conversion with Skia (tdf#134365)

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Telesto 2020-07-03 19:37:52 UTC
@Roman
Would you mind to check if to issue gone? I still reproduce it (while most time being spend in my driver).

Or someone else with an AMD/ATI card
Comment 7 Roman Kuznetsov 2020-07-04 13:14:26 UTC
no problem in

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 92c2318db92c3f102243ef1f8a9a492796932ff6
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

but I have Intel video here