avoid costly to-monochrome-bitmap conversion with Skia (tdf#134365)

The BitmapEx 1bpp monochrome bitmap mask constructor forces the mask
to be 1bpp, which is done in software by BitmapMonochromeFilter.
Which with Vulkan leads to fetching all the data from the GPU,
usually only to be converted and then pushed back to the GPU.
Similarly to MACOSX and iOS, just use AlphaMask, which is just
better (8bit is easier to handle and in Skia's case it's also
optimized to avoid fetching the data if possible).

Change-Id: I5770c2b0c298c1534b7ff56cc905d2d668d3a8df
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97525
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>